# videoclub

./: .gitignore  AGENTS.md  README.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
docs/: extractor-pipeline.md  rebuild-automation.md  website-rebuild-automation-setup.md
extractor/: .gcloudignore  .gitignore  NOTES.md  README.md  cloudbuild.yaml  main.py  pyproject.toml
extractor/extractor/: __init__.py  annotate.py  annotate_llm.py  api.py  download.py  extract.py  get_infos_video.py  logging.py  models.py  utils.py
extractor/extractor/annotate/: __init__.py  annotate.py  models.py
extractor/extractor/annotate/old/annotate/: __main__.py  annotate.py
extractor/extractor/annotate/old/process_annotations/: __init__.py  __main__.py  filter.py  group.py  models.py  organize.py  utils.py
extractor/extractor/annotate/old/videointelligence/: models.py
extractor/extractor/extract/: __init__.py  __main__.py  extract.py  llm.py
extractor/extractor/movies/: __init__.py  __main__.py  extract.py  models.py  tmdb.py
extractor/extractor/process_annotations/: __init__.py  __main__.py  filter.py  group.py  models.py  organize.py  utils.py
extractor/extractor/video/: get_infos_video.py  models.py
extractor/extractor/youtube/: __init__.py  download_video.py  models.py  youtube.py
extractor/functions/: __init__.py  aggregator.py  discover.py  prepare_data.py  processor.py
extractor/scripts/: annotate_all_videos.py  annotate_videos.py  check_processed_video.py  download_all_videos.py  extract_movies_all_videos.py  extract_movies_videos.py  get_infos_all_videos.py  get_infos_videos.py  manage_blacklist.py  migrate_annotations.py  prepare_data.py
extractor/scripts/utils/: find_annotations-request_bucket.py
extractor/tests/: metrics.json  test_annotate.py
extractor/tests/groundtruth/HLUe85q1hNM/: annotations.json  movies.json
extractor/tests/predictions/: HLUe85q1hNM.json
extractor/tests/predictions/HLUe85q1hNM/: 1737987455-annotations.json  1737987455.json
scripts/: download_all_videos.py
web/: .firebaserc  CONTRIBUTING.md  README.md  TODO.txt  cloudbuild.yaml  firebase.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  navbar.module.css  navbar.tsx  not-found.tsx  page.module.css  page.tsx
web/app/(item)/: MovieInfoPanel.tsx  layout.module.css  layout.tsx  movieDetails.module.css  movieDetails.tsx
web/app/(meilleurs)/: BestMediaClient.tsx  meilleurs.module.css  meilleurs.tsx
web/app/meilleurs/: page.tsx
web/app/video/: VideoFeedClient.tsx  VideoFeedPage.tsx  page.module.css  page.tsx
web/components/: Card.module.css  Card.tsx  Gallery.module.css  Gallery.tsx  MovieCard.module.css  MovieCard.tsx  MovieCardDetails.tsx  MovieCards.tsx  PaginationNav.tsx  PersonCard.tsx  SearchBar.tsx  SearchDialog.tsx  Timeline.module.css  Timeline.tsx  film.tsx  footer.module.css  footer.tsx  logo.module.css  logo.tsx  meilleurs.module.css  meilleurs.tsx  movie-card.tsx  movieDetails.module.css  movieDetails.tsx  navbar.module.css  navbar.tsx  person.tsx  utils.module.css  videoPlayer.module.css  videoPlayer.tsx  videoThumbnail.module.css  videoThumbnail.tsx
web/components/styles/: Card.module.css  MovieCardDetails.module.css  PaginationNav.module.css  Personnalites.module.css  footer.module.css  logo.module.css  search.module.css  searchBar.module.css  utils.module.css  videoThumbnail.module.css  (+1 more)
web/lib/: data.ts  pagination.ts  utils.ts
web/scripts/: create_db.ts  generateSearchIndex.ts  invoke_prepare_data.py
(+30 files in other folders)
